# dotfiles

./: .gitattributes  .gitignore  .gitmodules  .luacheckrc  .luarc.json  .stylua.toml  LICENSE  Makefile  README.md  README.org  dotfiles  dotfiles.cmd  init.vim  install.sh  top.sls  zshrc
.github/workflows/: secrets.yaml  tests.yaml
config/: profile
config/alacritty/: alacritty.yml
config/alsa/: asoundrc
config/awesome/: apps.lua  rc.lua
config/awesome/lib/lpam/: CMakeLists.txt
config/awesome/lib/lpam/src/: main.c
config/btop/: btop.conf
config/fontconfig/: fonts.conf
config/git/: config  daily  message  stats
config/gmailctl/: config.jsonnet
config/gpg/: .gitignore  gpg-agent.conf  install.sls
config/gtk-3.0/: settings.ini
config/htop/: htoprc
config/isync/: mbsyncrc
config/keepassxc/: keepassxc.ini
config/mpd/: mpd.conf
config/msmtp/: config
config/neovim/: filetype.lua  init.lua  install.sls
config/picom/: picom.conf
config/pueue/: pueue.yml
config/remmina/: remmina.pref
config/ssh/: .gitignore  0a63dfbb-a4c7-5986-96a2-72f9ec6df2b4.pub  1ad887d8-82be-557e-8534-f0c2eff33251.pub  24f2a6a7-9794-4840-b119-ad9c7b617700.pub  config  install.sls  known_hosts  (+4 more)
emacs/: init.el
etc/: pacman.conf
neovim/: init.lua
scripts/: minimal_test.vim  mouse-with-keyboard.sh  remap-caps-lock.sh
setup/: cleanup.sls  init.sls  install.sls  libvirtd.sls  packages.sls  prepare.sls  sysconfig.sls  xdg.sls
src/usbreset/: CMakeLists.txt  README.md  usbreset.c
tests/: minimal.vim
xdg/: profile
zsh/: 000-xdg-setup.zsh  gruvbox.dircolors
(+1252 files in other folders)
